working on track properties dialogs

--- a/source/dialogs/line-style/line-style-modal.html
+++ b/source/dialogs/line-style/line-style-modal.html
@@ -62,7 +62,7 @@
                                 <div class="col-sm-8 text-left">
                                     <input kendo-color-picker k-palette="'websafe'"
                                            class="form-control wi-form-control"
-                                           ng-model="wiModal.lineColor" ng-change="wiModal.getColor();"/>
+                                           ng-model="wiModal.lineColor"/>
                                     {{wiModal.lineColor}}
                                 </div>
                             </div>
