done resizable window

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -71,7 +71,7 @@
 </head>
 
 <body ng-app='wiapp'>
-    <div class='main' ng-controller="AppController as app">
+    <div class='main' id="main" ng-controller="AppController as app">
         <div class="ribbon-wrapper">
             @@include('./ribbon-block/index.html')
         </div>
