--- a/source/dialogs/blank-logplot/blank-logplot-modal.html
+++ b/source/dialogs/blank-logplot/blank-logplot-modal.html
@@ -1,19 +1,17 @@
-<div class='modal fade'>
+<div class='modal fade ' data-backdrop="static" data-keyboard="false">
     <div class='modal-dialog'>
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" data-dismiss="modal" aria-hidden="true">&times;</button>
                 <h4><span class="logplot-new-16x16"></span>&nbsp;Create New Logplot</h4>
-                <p>Log plot</p>
             </div>
             <div class="modal-body text-center">
                 <form class="form-horizontal" action="" name="modalBlankPlot">
                     <div class="form-group">
-                        <label class="control-label col-sm-3" for="name">Well name:</label>
+                        <label class="control-label col-sm-3" for="name">Name:</label>
                         <div class="col-sm-9">
-                            <input type="text"
-                                   class="form-control" value="" id="name" name="name"
-                                   ng-model="name"
+                            <input type="text" class="form-control"
+                                   ng-model="wiModal.name"
                                    ng-click="wiModal.error = null"
                                    required>
                         </div>
@@ -22,7 +20,10 @@
                 <p class="dialog-error" ng-if="wiModal.error">Error: {{wiModal.error}}</p>
             </div>
             <div class="modal-footer">
-                <button class='btn btn-default' ng-click='wiModal.onOkButtonClicked()'><span class="ok-16x16"></span>&nbsp;Ok</button>
+                <button
+                    class='btn btn-default'
+                    ng-disabled="wiModal.disabled || !modalBlankPlot.$dirty || (modalBlankPlot.$dirty && modalBlankPlot.$invalid)"
+                    ng-click='wiModal.onOkButtonClicked()'><span class="ok-16x16"></span>&nbsp;Ok</button>
                 <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()' data-dismiss="modal"><span class="close-16x16"></span>&nbsp;Cancel</button>
             </div>
         </div>
