fill pattern setting

--- a/source/dialogs/error-message/error-message-modal.html
+++ b/source/dialogs/error-message/error-message-modal.html
@@ -6,12 +6,11 @@
                 <h4>Error</h4>
             </div>
             <div class="modal-body text-center padding-2em">
-                <span class="cancel-32x32-edit"></span>
-                <span class="margin-left-0_5em"><b><i>{{wiModal.error}}</i></b></span>
+                <span class="cancel-32x32-edit valign-middle"></span>
+                <span class="margin-left-0_5em color-error"><i>{{wiModal.error}}</i></span>
             </div>
             <div class="modal-footer">
-                <button class='btn btn-default' ng-click='wiModal.onOkButtonClicked()'>Ok</button>
-                <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'>Cancel</button>
+                <button class='btn btn-default' ng-click='wiModal.onOkButtonClicked()'>Close</button>
             </div>
         </div>
     </div>
