--- a/source/dialogs/fill-pattern-setting/fill-pattern-setting-modal-test.html
+++ b/source/dialogs/fill-pattern-setting/fill-pattern-setting-modal-test.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" type="text/css" href="css/dialogs.css">
     <link rel="stylesheet" href="css/main.css">
     <link href='css/wi-tab.css' rel='stylesheet'>
+    <link href='css/graph.css' rel='stylesheet'>
 
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
     <script src="vendor/js/angular-modal-service.min.js"></script>
-    <!--<script src="../main.js"></script>-->
+    <script src="js/main.js.bundle.js"></script>
     <script src='js/main-fill-pattern-setting-modal.js.bundle.js'></script>
 
     <link rel="stylesheet" href="css/sprite_16.css">
@@ -28,6 +29,8 @@
 
     <link rel="stylesheet" href="vendor/css/select.css">
     <script src="vendor/js/select.js"></script>
+    <script src='js/main-canvas-rect-test.js.bundle.js'></script>
+
     
 </head>
 <body ng-app='app'>
