--- a/source/dialogs/fill-pattern-setting/fill-pattern-setting-modal.html
+++ b/source/dialogs/fill-pattern-setting/fill-pattern-setting-modal.html
@@ -15,9 +15,22 @@
                             <div class="form-group">
                                 <label class="control-label col-sm-4">Fill pattern</label>
                                 <div class="col-sm-8">
-                                    <select ng-model="wiModal.options.fill.pattern"
-                                            class="form-control wi-form-control">
-                                    </select>
+                                    <ui-select theme="bootstrap" ng-model="wiModal.options.fillPattern">
+                                        <ui-select-match>
+                                            <wi-canvas-rect name="_selectedPatternCanvas" pattern="chert" 
+                                                            width="250" height="20" 
+                                                            foreground="{{wiModal.options.fill.foreground}}" 
+                                                            background='{{wiModal.options.fill.background}}'>
+                                            </wi-canvas-rect>
+                                        </ui-select-match>
+                                        <ui-select-choices repeat="pattern in wiModal.selectPatterns">
+                                            <wi-canvas-rect name="{{pattern}}" pattern="{{pattern}}" 
+                                                            width="250" height="20" 
+                                                            foreground="{{wiModal.options.fill.foreground}}" 
+                                                            background='{{wiModal.options.fill.background}}'>
+                                            </wi-canvas-rect>
+                                        </ui-select-choices>
+                                    </ui-select>
                                 </div>
                             </div>
                         </div>
@@ -28,7 +41,6 @@
                                     <input kendo-color-picker k-palette="'websafe'"
                                            class="form-control wi-form-control"
                                            ng-model="wiModal.options.fill.foreground"/>
-                                    {{wiModal.options.fill.foreground}}
                                 </div>
                             </div>
                         </div>
@@ -39,7 +51,6 @@
                                     <input kendo-color-picker k-palette="'websafe'"
                                            class="form-control wi-form-control"
                                            ng-model="wiModal.options.fill.background"/>
-                                    {{wiModal.options.fill.background}}
                                 </div>
                             </div>
                         </div>
@@ -47,12 +58,12 @@
                     <div class="row">
                         <div class="form-group">
                             <div class="col-sm-7">
-                                <label for="displayFill" class="normal-text">
+                                <label class="normal-text">
                                     <input type="checkbox" id="displayFill"
                                            value="" name=""
-                                           ng-model="wiModal.displayFill"
-                                           ng-change="wiModal.enableFill('positiveNegative');">
-                                    Positive/Negative fill
+                                           ng-model="wiModal.options.fill.isFill"
+                                           ng-change="wiModal.enableFill('positiveNegative', wiModal.options.fill.isFill);">
+                                    Positive/Negative Fill
                                 </label>
                             </div>
                         </div>
@@ -60,66 +71,24 @@
                     <div class="row">
                         <div id="positiveNegative">
                             <div class="container-fluid">
+                                <h5>Positive/Negative Fill</h5>
                                 <div class="col-sm-12">
                                     <div class="form-group">
-                                        <label for="noPositiveFill" class="normal-text">
+                                        <label class="normal-text">
                                             <input type="checkbox" id="noPositiveFill"
                                                    value="" name=""
-                                                   ng-model="wiModal.options.positiveNegative.noPositive.noPositiveFill">
+                                                   ng-model="wiModal.options.positiveFill.isFill"
+                                                   ng-change="wiModal.enableFill('positiveFill', wiModal.options.positiveFill.isFill);">
                                             No Positive fill
                                         </label>
                                     </div>
                                     <div class="row">
-                                        <div class="col-sm-12">
-                                            <div class="form-group">
-                                                <label class="control-label col-sm-4">Positive pattern</label>
-                                                <div class="col-sm-8">
-                                                    <select ng-model="wiModal.options.positiveNegative.positiveFill.pattern"
-                                                            class="form-control wi-form-control">
-                                                    </select>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <div class="form-group">
-                                                <label class="control-label col-sm-6 small-text" >Positive Foreground</label>
-                                                <div class="col-sm-6 text-left">
-                                                    <input kendo-color-picker k-palette="'websafe'"
-                                                           class="form-control wi-form-control"
-                                                           ng-model="wiModal.options.positiveNegative.positiveFill.foreground"/>
-                                                    {{wiModal.options.positiveNegative.positiveFill.foreground}}
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <div class="form-group">
-                                                <label class="control-label col-sm-6 small-text">Positive Background</label>
-                                                <div class="col-sm-6 text-left">
-                                                    <input kendo-color-picker k-palette="'websafe'"
-                                                           class="form-control wi-form-control"
-                                                           ng-model="wiModal.options.positiveNegative.positiveFill.background"/>
-                                                    {{wiModal.options.positiveNegative.positiveFill.background}}
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="col-sm-12">
-                                        <div class="form-group">
-                                            <label for="noNegativeFill" class="normal-text">
-                                                <input type="checkbox" id="noNegativeFill"
-                                                       value="" name=""
-                                                       ng-model="wiModal.options.positiveNegative.negativeFill.noNegativeFill">
-                                                No Negative fill
-                                            </label>
-                                        </div>
-                                        <div class="row">
+                                        <div id="positiveFill">
                                             <div class="col-sm-12">
                                                 <div class="form-group">
-                                                    <label class="control-label col-sm-4">Negative pattern</label>
+                                                    <label class="control-label col-sm-4">Positive pattern</label>
                                                     <div class="col-sm-8">
-                                                        <select ng-model="wiModal.options.positiveNegative.negativeFill.pattern"
+                                                        <select ng-model="wiModal.options.isFill.noPositive.pattern"
                                                                 class="form-control wi-form-control">
                                                         </select>
                                                     </div>
@@ -131,8 +100,7 @@
                                                     <div class="col-sm-6 text-left">
                                                         <input kendo-color-picker k-palette="'websafe'"
                                                                class="form-control wi-form-control"
-                                                               ng-model="wiModal.options.positiveNegative.negativeFill.foreground"/>
-                                                        {{wiModal.options.positiveNegative.negativeFill.foreground}}
+                                                               ng-model="wiModal.options.isFill.positiveFill.foreground"/>
                                                     </div>
                                                 </div>
                                             </div>
@@ -142,8 +110,52 @@
                                                     <div class="col-sm-6 text-left">
                                                         <input kendo-color-picker k-palette="'websafe'"
                                                                class="form-control wi-form-control"
-                                                               ng-model="wiModal.options.positiveNegative.negativeFill.background"/>
-                                                        {{wiModal.options.positiveNegative.negativeFill.background}}
+                                                               ng-model="wiModal.options.isFill.positiveFill.background"/>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-12">
+                                    <div class="form-group">
+                                        <label for="noNegativeFill" class="normal-text">
+                                            <input type="checkbox" id="noNegativeFill"
+                                                   value="" name=""
+                                                   ng-model="wiModal.options.negativeFill.isFill"
+                                                   ng-change="wiModal.enableFill('negativeFill', wiModal.options.negativeFill.isFill);">
+                                            No Negative fill
+                                        </label>
+                                    </div>
+                                    <div class="row">
+                                        <div id="negativeFill">
+                                            <div class="col-sm-12">
+                                                <div class="form-group">
+                                                    <label class="control-label col-sm-4">Negative pattern</label>
+                                                    <div class="col-sm-8">
+                                                        <select ng-model="wiModal.options.isFill.negativeFill.pattern"
+                                                                class="form-control wi-form-control">
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-6">
+                                                <div class="form-group">
+                                                    <label class="control-label col-sm-6 small-text" >Positive Foreground</label>
+                                                    <div class="col-sm-6 text-left">
+                                                        <input kendo-color-picker k-palette="'websafe'"
+                                                               class="form-control wi-form-control"
+                                                               ng-model="wiModal.options.isFill.negativeFill.foreground"/>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-6">
+                                                <div class="form-group">
+                                                    <label class="control-label col-sm-6 small-text">Positive Background</label>
+                                                    <div class="col-sm-6 text-left">
+                                                        <input kendo-color-picker k-palette="'websafe'"
+                                                               class="form-control wi-form-control"
+                                                               ng-model="wiModal.options.isFill.negativeFill.background"/>
                                                     </div>
                                                 </div>
                                             </div>
@@ -158,12 +170,11 @@
             </div>
             <div class="modal-footer">
                 <button ng-click="wiModal.onOkButtonClicked()" class="btn btn-default">
-                    <span class="ok-16x16"></span>&nbsp;OK
+                    <span class="ok-16x16"></span>&nbsp;Close
                 </button>
-                <button class="btn btn-default"
-                        ng-click="wiModal.onCancelButtonClicked()"
-                        data-dismiss="modal"><span class="cancel-16x16"></span>&nbsp;Cancel
-                </button>
+                <!-- <button class="btn btn-default" ng-click="wiModal.onCancelButtonClicked()">
+                    <span class="cancel-16x16"></span>&nbsp;Cancel
+                </button> -->
             </div>
         </div>
     </div>
